--- a/projet1/package.json
+++ b/projet1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projet1",
+  "name": "infradon2-vue",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -14,7 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "events": "^3.3.0",
     "pinia": "^2.1.7",
+    "pouchdb": "^9.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
@@ -23,7 +25,9 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.5",
+    "@types/pouchdb": "^6.4.2",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
